# sfs

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
sfs/: __init__.py  aes.py  sfs.py  structs.py  utils.py  wrongaes.py
test/: test_sfs.py  test_sfs_crypto.py
test/assets/: LayoutDef.lyd  LayoutDef.lyd.template  compressed_example.sfs  directory_example.sfs  encrypted_example.sfs  ugly_label.stc
